k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-microservice
  labels:
    name: fastapi-microservice
